--- a/lab05/lab05/html/log-in.html
+++ b/lab05/lab05/html/log-in.html
@@ -7,10 +7,11 @@
     <link href="../libs/bootstrap.css" rel="stylesheet" />
     <script src="../libs/jquery.js"></script>
     <script src="../libs/bootstrap.js"></script>  
+    <script src="../js/scripts5.js"></script>
 </head>
 <body>
     <div class="container">
-        <form action="../php/log-in.php" method="post">
+        <form action="../php/log-in.php" method="post" onsubmit="logIn(event)">
             <h3 class="text-center">Вхід</h3>
 
             <div class="form-group">
@@ -25,6 +26,27 @@
             
             <input class="btn btn-primary center-block" type="submit" value="Увійти" />
         </form>
+    </div>      
+    
+    <!-- Modal -->
+    <div class="modal fade" id="my-dialog" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-center">Результат реєстрації</h4>
+                </div>
+                <div class="modal-body">
+                    <p></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
