--- a/lab05/lab05/html/sign-up.html
+++ b/lab05/lab05/html/sign-up.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <form id="form" action="../php/sign-up.php" method="post" onsubmit="validatePassword()">
+        <form id="form" action="../php/sign-up.php" method="post" onsubmit="registerNewUser(event)">
             <h3 class="text-center">Заповніть анкету</h3>
 
             <div class="form-group">
@@ -41,6 +41,27 @@
 
             <input class="btn btn-primary center-block" type="submit" value="Відправити"/>
         </form>
+    </div>    
+    
+    <!-- Modal -->
+    <div class="modal fade" id="my-dialog" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-center">Результат реєстрації</h4>
+                </div>
+                <div class="modal-body">
+                    <p></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
