--- a/lab06/lab06/index.html
+++ b/lab06/lab06/index.html
@@ -18,7 +18,8 @@
                 <li><a href="html/create.html">Create</a></li>
                 <li><a href="html/read.html">Read</a></li>
                 <li><a href="html/update.html">Update</a></li>
-                <li><a href="html/delete.html">Delete</a></li>
+                <li><a href="html/delete.html">Delete</a></li> 
+                <li><a href="html/all-in-one.html">All in one</a></li>
             </ul>
         </div>
     </nav>	 
