--- a/lab06/lab06/html/create.html
+++ b/lab06/lab06/html/create.html
@@ -20,6 +20,7 @@
                 <li><a href="read.html">Read</a></li>
                 <li><a href="update.html">Update</a></li>
                 <li><a href="delete.html">Delete</a></li>
+                <li><a href="all-in-one.html">All in one</a></li>
             </ul>
         </div>
     </nav>	
